--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -1,11 +1,9 @@
 .projects {
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
   gap: 50px;
-  margin: 5% 25%;
 }
 
 .card-btn {
